# Rodriguez-Capcha-CS197-M2

./: .gitignore  README.md  main.py  pyproject.toml  testing.ipynb
configs/: __init__.py  metadata.py
cs195-ska-projects/: README.md
cs195-ska-projects/learning/: week1_koopman_theory.md  week2_exercises.py  week2_hands_on.md
cs195-ska-projects/project_01/: PLAN.md  online_ska.py
cs195-ska-projects/project_02/: PLAN.md  weight_transplant.py
cs195-ska-projects/project_03/: PLAN.md  koopman_mlp_ablation.py
cs195-ska-projects/project_04/: PLAN.md  rank_sweep.py
cs195-ska-projects/project_05/: PLAN.md  spectral_analysis.py
cs195-ska-projects/project_06/: PLAN.md  ska_vit.py
cs195-ska-projects/project_07/: PLAN.md  hybrid_switching.py
cs195-ska-projects/project_08/: PLAN.md  (+1 more)
cs195s2026.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jobs/: job1_generate_queries.py  job2_build_training_labels.py  job2_fiqa_segments.py  job2_scifact_segments.py
notebooks/: covariance_test.ipynb  fixing_precision_test.ipynb  week4_5_data_and_baseline_mlp.ipynb  week6_scaled_data_and_retrain.ipynb  week7_end_to_end_comparison.ipynb  week9_cross_robustness.ipynb
outputs/: lambda_predictor_week5_checkpoint.pt  lambda_sweep_baseline.json
scripts/: __init__.py  reporting.py
shared/: beir_data.py  beir_scoring.py  constants.py  corpus.py  dataset_utils.py  embedding.py  fineweb_loader.py  io_utils.py  lambda_inference.py  logging_utils.py  marco_loader.py  predictor.py  schemas.py  scoring.py  segments.py  sweep.py  sweep_utils.py
(+76 files in other folders)
