[project]
name = "cs195s2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy",
    "torch",
    "matplotlib",
    "pyyaml"
]

[tool.setuptools.packages.find]
include = ["shared*", "ska_agent*"]