[project]
name = "cs195s2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy",
    "torch",
    "matplotlib",
    "pyyaml",
    "beir",
    "datasets",
    "sentence-transformers",
    "transformers",
    "spacy",
    "accelerate>=1.13.0",
]

[tool.setuptools.packages.find]
include = ["shared*", "ska_agent*"]
